# bayesbench

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  netlify.toml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml
docs/: adapters.md  api-reference.md  concepts.md  examples.md  getting-started.md  index.md  workflows.md
examples/: framework_adapters.py  inspect_example.py  llm_comparison.py  mteb_example.py  multi_model_ranking.py  quickstart.py
src/bayesbench/: __init__.py  benchmark.py  cli.py  core.py  decorators.py  ranking.py
src/bayesbench/adapters/: __init__.py  anthropic_adapter.py  base.py  huggingface.py  inspect_ai.py  mteb.py  openai_compat.py  openclaw.py
src/bayesbench/posteriors/: __init__.py  base.py  dirichlet.py  gamma.py  normal.py
src/baysbench/: __init__.py  benchmark.py  cli.py  core.py  decorators.py  ranking.py
src/baysbench/adapters/: __init__.py  anthropic_adapter.py  base.py  huggingface.py  inspect_ai.py  mteb.py  openai_compat.py  openclaw.py
src/baysbench/posteriors/: __init__.py  base.py  beta.py  dirichlet.py  gamma.py  normal.py
tests/: test_adapters.py  test_benchmark.py  test_core.py  test_docker_adapter_envs.py  test_inspect_adapter.py  test_mteb_adapter.py  test_new_posteriors.py  test_openclaw_adapter.py  test_posteriors.py  test_ranking.py
