[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baysbench"
version = "0.4.0"
description = "Bayesian sequential benchmarking for LLMs and agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["bayesian", "benchmarking", "llm", "statistics", "testing", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "scipy>=1.10",
    "numpy>=1.24",
    "tqdm>=4.64",
]

[project.urls]
Homepage = "https://github.com/rymarinelli/baysbench"
Repository = "https://github.com/rymarinelli/baysbench"
"Bug Tracker" = "https://github.com/rymarinelli/baysbench/issues"
Changelog = "https://github.com/rymarinelli/baysbench/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
huggingface = [
    "huggingface_hub>=0.23",
    "datasets>=2.19",
]
openai = [
    "openai>=1.30",
]
anthropic = [
    "anthropic>=0.28",
]
inspect = [
    "inspect-ai>=0.3",
]
mteb = [
    "mteb>=1.0",
    "sentence-transformers>=2.5",
]
all = [
    "baysbench[huggingface,openai,anthropic,inspect,mteb]",
]

[project.scripts]
baysbench = "baysbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
baysbench = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["baysbench"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
show_error_codes = true

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
